// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`base/page/Nav/SideMenu/GlobalSetting render snap when "checkPagePermission" is return false 1`] = `
<body>
  <div>
    <div
      class="global-system-icon-wrapper"
    >
      <svg
        class="custom-icon-global-system"
        color=""
        fill="none"
        height="18"
        viewBox="0 0 18 18"
        width="18"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          clip-rule="evenodd"
          d="M16.125 4.875 9 .75 1.875 4.875v8.25L9 17.25l7.125-4.125zM9 12.75a3.75 3.75 0 1 0 0-7.5 3.75 3.75 0 0 0 0 7.5"
          fill="#C3C6CD"
          fill-rule="evenodd"
        />
        <path
          d="M9 11.25a2.25 2.25 0 1 0 0-4.5 2.25 2.25 0 0 0 0 4.5"
          fill="#8A8F99"
        />
      </svg>
    </div>
  </div>
</body>
`;

exports[`base/page/Nav/SideMenu/GlobalSetting render snap when "checkPagePermission" is return false 2`] = `
<body>
  <div>
    <div
      class="global-system-icon-wrapper ant-popover-open"
    >
      <svg
        class="custom-icon-global-system"
        color="#575c66"
        fill="none"
        height="18"
        viewBox="0 0 18 18"
        width="18"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          clip-rule="evenodd"
          d="M16.125 4.875 9 .75 1.875 4.875v8.25L9 17.25l7.125-4.125zM9 12.75a3.75 3.75 0 1 0 0-7.5 3.75 3.75 0 0 0 0 7.5"
          fill="currentColor"
          fill-rule="evenodd"
        />
        <path
          d="M9 11.25a2.25 2.25 0 1 0 0-4.5 2.25 2.25 0 0 0 0 4.5"
          fill="currentColor"
        />
      </svg>
    </div>
  </div>
  <div>
    <div
      class="ant-popover css-dev-only-do-not-override-txh9fw css-dev-only-do-not-override-txh9fw ant-popover-placement-topRight"
      style="--arrow-x: 0px; --arrow-y: 0px; left: -1000vw; top: -1000vh; box-sizing: border-box;"
    >
      <div
        class="ant-popover-content"
      >
        <div
          class="ant-popover-inner"
          role="tooltip"
          style="padding: 0px;"
        >
          <div
            class="ant-popover-inner-content"
          >
            <div
              class="css-1uknfyo"
            >
              <div
                class="header"
              >
                全局设置
              </div>
              <div
                class="content"
              >
                <div
                  class="content-item"
                >
                  <svg
                    height="16"
                    viewBox="0 0 18 19"
                    width="16"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M15 17H3a.75.75 0 0 1-.75-.75V2.75A.75.75 0 0 1 3 2h12a.75.75 0 0 1 .75.75v13.5A.75.75 0 0 1 15 17M6 5.75v1.5h6v-1.5zm0 3v1.5h6v-1.5zm0 3v1.5h3.75v-1.5z"
                      fill="#C3C6CD"
                    />
                  </svg>
                  <div
                    class="content-item-text"
                  >
                    查看规则
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`base/page/Nav/SideMenu/GlobalSetting render snap when is "checkPagePermission" is return true 1`] = `
<body>
  <div>
    <div
      class="global-system-icon-wrapper"
    >
      <svg
        class="custom-icon-global-system"
        color=""
        fill="none"
        height="18"
        viewBox="0 0 18 18"
        width="18"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          clip-rule="evenodd"
          d="M16.125 4.875 9 .75 1.875 4.875v8.25L9 17.25l7.125-4.125zM9 12.75a3.75 3.75 0 1 0 0-7.5 3.75 3.75 0 0 0 0 7.5"
          fill="#C3C6CD"
          fill-rule="evenodd"
        />
        <path
          d="M9 11.25a2.25 2.25 0 1 0 0-4.5 2.25 2.25 0 0 0 0 4.5"
          fill="#8A8F99"
        />
      </svg>
    </div>
  </div>
</body>
`;

exports[`base/page/Nav/SideMenu/GlobalSetting render snap when is "checkPagePermission" is return true 2`] = `
<body>
  <div>
    <div
      class="global-system-icon-wrapper ant-popover-open"
    >
      <svg
        class="custom-icon-global-system"
        color="#575c66"
        fill="none"
        height="18"
        viewBox="0 0 18 18"
        width="18"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          clip-rule="evenodd"
          d="M16.125 4.875 9 .75 1.875 4.875v8.25L9 17.25l7.125-4.125zM9 12.75a3.75 3.75 0 1 0 0-7.5 3.75 3.75 0 0 0 0 7.5"
          fill="currentColor"
          fill-rule="evenodd"
        />
        <path
          d="M9 11.25a2.25 2.25 0 1 0 0-4.5 2.25 2.25 0 0 0 0 4.5"
          fill="currentColor"
        />
      </svg>
    </div>
  </div>
  <div>
    <div
      class="ant-popover css-dev-only-do-not-override-txh9fw css-dev-only-do-not-override-txh9fw ant-popover-placement-topRight"
      style="--arrow-x: 0px; --arrow-y: 0px; left: -1000vw; top: -1000vh; box-sizing: border-box;"
    >
      <div
        class="ant-popover-content"
      >
        <div
          class="ant-popover-inner"
          role="tooltip"
          style="padding: 0px;"
        >
          <div
            class="ant-popover-inner-content"
          >
            <div
              class="css-1uknfyo"
            >
              <div
                class="header"
              >
                全局设置
              </div>
              <div
                class="content"
              >
                <div
                  class="content-item"
                >
                  <svg
                    height="16"
                    viewBox="0 0 16 16"
                    width="16"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M2.522 1.884 8 .667l5.478 1.217a.67.67 0 0 1 .522.65v6.659a4 4 0 0 1-1.781 3.328L8 15.333l-4.219-2.812A4 4 0 0 1 2 9.193V2.535a.67.67 0 0 1 .522-.65M8 7.334A1.667 1.667 0 1 0 8 4a1.667 1.667 0 0 0 0 3.333m-2.982 3.333h5.964a3 3 0 0 0-5.964 0"
                      fill="#C3C6CD"
                    />
                  </svg>
                  <div
                    class="content-item-text"
                  >
                    用户中心
                  </div>
                </div>
                <div
                  class="content-item"
                >
                  <svg
                    height="16"
                    viewBox="0 0 18 18"
                    width="16"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M15.75 7.125v2.25c0 1.864-3.023 3.375-6.75 3.375s-6.75-1.511-6.75-3.375v-2.25C2.25 8.989 5.273 10.5 9 10.5s6.75-1.511 6.75-3.375m-13.5 3.75c0 1.864 3.023 3.375 6.75 3.375s6.75-1.511 6.75-3.375v2.25c0 1.864-3.023 3.375-6.75 3.375s-6.75-1.511-6.75-3.375zM9 9C5.273 9 2.25 7.489 2.25 5.625S5.273 2.25 9 2.25s6.75 1.511 6.75 3.375S12.727 9 9 9"
                      fill="#C3C6CD"
                    />
                  </svg>
                  <div
                    class="content-item-text"
                  >
                    数据源管理
                  </div>
                </div>
                <div
                  class="content-item"
                >
                  <svg
                    height="16"
                    viewBox="0 0 16 16"
                    width="16"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M2 8h2.667v6H2zm9.333-2.667H14V14h-2.667zm-4.666-4h2.666V14H6.667z"
                      fill="#C3C6CD"
                    />
                  </svg>
                  <div
                    class="content-item-text"
                  >
                    报表统计
                  </div>
                </div>
                <div
                  class="content-item"
                >
                  <svg
                    height="16"
                    viewBox="0 0 18 19"
                    width="16"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M15 17H3a.75.75 0 0 1-.75-.75V2.75A.75.75 0 0 1 3 2h12a.75.75 0 0 1 .75.75v13.5A.75.75 0 0 1 15 17M6 5.75v1.5h6v-1.5zm0 3v1.5h6v-1.5zm0 3v1.5h3.75v-1.5z"
                      fill="#C3C6CD"
                    />
                  </svg>
                  <div
                    class="content-item-text"
                  >
                    查看规则
                  </div>
                </div>
                <div
                  class="content-item"
                >
                  <svg
                    height="16"
                    viewBox="0 0 16 16"
                    width="16"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M13.333 1.333c.368 0 .667.299.667.667v2.505l-6 6-.003 2.825 2.83.004L14 10.16V14a.667.667 0 0 1-.667.667H2.667A.667.667 0 0 1 2 14V2c0-.368.299-.667.667-.667zm1.186 4.539.942.943L10.276 12l-.944-.001.001-.942zM8 8H4.667v1.333H8zm2-2.667H4.667v1.334H10z"
                      fill="#C3C6CD"
                    />
                  </svg>
                  <div
                    class="content-item-text"
                  >
                    规则管理
                  </div>
                </div>
                <div
                  class="content-item"
                >
                  <svg
                    height="16"
                    viewBox="0 0 16 16"
                    width="16"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M6.636 1.473a6.7 6.7 0 0 1 2.727-.001 2.66 2.66 0 0 0 2.436 2.258c.399.03.8-.03 1.172-.176a6.7 6.7 0 0 1 1.362 2.363 2.66 2.66 0 0 0-1 2.083c0 .843.39 1.594 1.001 2.083a6.7 6.7 0 0 1-1.364 2.362 2.664 2.664 0 0 0-3.606 2.08c-.9.19-1.828.19-2.728.003a2.66 2.66 0 0 0-2.435-2.26c-.4-.03-.8.03-1.173.177a6.7 6.7 0 0 1-1.362-2.364 2.66 2.66 0 0 0 .737-3.237 2.7 2.7 0 0 0-.738-.927 6.7 6.7 0 0 1 1.364-2.362 2.66 2.66 0 0 0 3.173-.98c.225-.33.374-.706.434-1.101M8 10a2 2 0 1 0 0-4 2 2 0 0 0 0 4"
                      fill="#C3C6CD"
                    />
                  </svg>
                  <div
                    class="content-item-text"
                  >
                    系统设置
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</body>
`;
